[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-one"
path = "src/day_1/main.rs"

[[bin]]
name = "day-two"
path = "src/day_2/main.rs"

[[bin]]
name = "day-three"
path = "src/day_3/main.rs"

[dependencies]
array_tool = "1.0.3"